--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ html,
 body {
   margin-top: 5%;
   padding: 0;
-  background-color: #2F441D;
+  background-color: #5183D0;
   place-self: center;
   
 }
