--- a/style.css
+++ b/style.css
@@ -1,10 +1,9 @@
-html,
-body {
+html body {
   margin-top: 5%;
   padding: 0;
-  background-color: #5183D0;
+  background-color: #184F28;
   place-self: center;
-  
+  text-align: center;
 }
 canvas {
   display: block;
